fixed overflow

--- a/frontend/src/components/Basic/datepicker/DatePicker.module.scss
+++ b/frontend/src/components/Basic/datepicker/DatePicker.module.scss
@@ -2,18 +2,16 @@
 	display: flex;
 	flex-wrap: nowrap;
 	justify-content: center;
-	gap: 2vw;
-	position: sticky;
-	top: 0;
-	div {
-		input {
-			padding: 1vh 4vw;
-			border: 1px solid var(--stroke-100);
-			border-radius: 30px;
-			font-size: 1rem;
-		}
-		button {
-			background: none;
-		}
+	gap: 1.5vw;
+	input {
+		padding: 1vh 4vw;
+		border: 1px solid var(--stroke-100);
+		border-radius: 30px;
+		font-size: 1rem;
+		width: 100%;
+	}
+	button {
+		background: none;
+		box-shadow: none;
 	}
 }
